ECL 9.6:
========

* MOP:

 - CALL-METHOD has only one required argument. Affects only calls to this
   macro inside nonstandard method combinations.

* Visible changes:

 - Physical pathnames do not always have a namestring from which they can be
   reconstructed. This is the case of directory pathnames with version numbers,
   for instance. Formerly ECL would refuse to print those pathnames if
   *PRINT-READABLY* was true, but now it uses instead a #. form.
    > (write (make-pathname :directory '(:relative)
                            :name nil :type nil :version :newest)
             :readably t))
    #.(MAKE-PATHNAME :HOST NIL :DEVICE NIL :DIRECTORY '(:RELATIVE) :NAME NIL
                     :TYPE NIL :VERSION :NEWEST :DEFAULTS NIL)

 - WITH-CSTRING automatically coerces extended strings to base strings,
   signalling an error when this is not possible.

 - New command line arguments, --heap-size, --lisp-stack, --frame-stack and
   --c-stack control the different memory limits.

 - The stack size is now measured in bytes, not in lisp words.

 - The out of memory error (ext:storage-exhausted) can now be recovered.
   By default a correctable error is signaled and the user is given the
   chance to increase the heap size.

* Function names:

 - Added a new section in external.h for defining compatibility macros
   for functions that changed name.

 - make_longfloat() is renamed ecl_make_longfloat().

 - Some functions got new names: ecl_make_cfun, ecl_make_cfun_va,
   ecl_make_cclosure_va, ecl_def_c_function, ecl_def_c_function_va.

* Numerics:

 - A new configuration flag --with-ieee-fp adds support for NaN's, infinities
   and signed zeros, disabling certain floating point exceptions by default.
   In addition, when this is set, functions like LOG or ATAN will not
   signal errors when their arguments are not valid, but rather return NaN's
   (LOG 0) => -infinity, (ATAN 0.0 0.0) => NaN

 - A new command line option --trap-fpe / --no-trap-fpe tells whether ECL